project/force-app/main/default/objects/Bankey__c/Bankey__c.object-meta.xml
<CustomObject>
    <label>Bank Key</label>
    <pluralLabel>Bank Keys</pluralLabel>
    <nameField>
        <label>Bankey Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>