project/force-app/main/default/objects/Bankey__c/fields/Bank_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Full_Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>