project/force-app/main/default/objects/Bankey__c/fields/Bank_Key_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Key_Code__c</fullName>
    <label>Bank Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>