project/force-app/main/default/objects/Bankey__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VN</fullName>
                <default>true</default>
                <label>VN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>