project/force-app/main/default/objects/Bankey__c/fields/Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code__c</fullName>
    <label>Swift Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>