project/force-app/main/default/objects/Bankey__c/listViews/All_Bankeys.listView-meta.xml
<ListView>
    <fullName>All_Bankeys</fullName>
    <columns>NAME</columns>
    <columns>Bank_Key_Code__c</columns>
    <columns>Bank_Full_Name__c</columns>
    <columns>Swift_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bankeys</label>
</ListView>